--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<!-- Write your HTML in this file -->
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <title>HTML Tag Lab</title>
+  </head>
+  <body>
+    <h1>Hello, World!</h1>
+  </body>
+</html
